--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "d3": "^7.0.0"
+    "crossfilter2": "^1.5.4",
+    "d3": "^7.0.0",
+    "d3-collection": "^1.0.7",
+    "d3-radial-axis": "^1.6.5",
+    "dc": "^4.2.7"
   },
   "browserslist": [
     "since 2017-06"
