--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "app",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "dependencies": {
     "crossfilter2": "^1.5.4",
     "d3": "^7.0.0",
     "d3-collection": "^1.0.7",
     "d3-radial-axis": "^1.6.5",
-    "dc": "^4.2.7"
+    "dc": "^4.2.7",
+    "feather-icons": "^4.28.0",
+    "react-icons": "^4.3.1"
   },
   "browserslist": [
     "since 2017-06"
